# avion-cargo

./: .flake8  .gitignore  DEMO_QUICK_START.md  README.md  autolanding_config.json  board_generator.py  cam_calibration_gridboard.py  fiche-descriptive-avion-cargo.md  generate_aruco.py  isort.cfg  landing_config.json  pose_estimation.py  pyproject.toml  requirements.txt  script.py
calibration_results/: pi_camera_calibration.yaml
docs/: GUIDE_COMPLET.md
scripts/: code-format-checking.sh  code-formatting.sh  project_cleaner.py
src/: MainApp.py  camera.py  demo_gui.py  generate_markers.py  image_treatment.py  main.py  mock_camera.py  mock_vehicle.py  production.py  send_interface.py  test_camera.py  vehicle_interface.py
src/application/: camera_calibration_service.py  camera_calibrator.py  drone_autolanding_service.py  tracking_service.py
src/assets/: index.html
src/assets/static/: main.css  main.js  webRTCViewer.js
src/domain/: buffer.py  camera.py  camera_calibration_engine.py  content_diffuser.py  content_streamer.py  drone.py  errors.py  frame_collector.py  frame_processor.py  marker_detector.py  marker_generators.py  models.py  pose_estimator.py  tracking.py
src/infrastructure/aruco_marker/: aruco_board_generator.py  aruco_marker_generator.py  aruco_pdf_writer.py
src/infrastructure/camera/: frame_buffer.py  opencv_capture_adapter.py  picamera_adapter.py
src/infrastructure/communication/: drone_mavlink_connector.py  drone_status_buffer.py  webrtc_content_diffuser.py  webrtc_content_streamer.py
src/infrastructure/persistence/: autolander_configuration_reader.py  calibration_repo.py  calibration_repository.py  configuration_models.py
src/infrastructure/vision/: live_frame_collector.py  opencv_aruco_detector.py  opencv_frame_manipution_tool.py  opencv_pose_estimator.py  (+4 more)
src/interface/: controller.py  interface_waiter.py  main_view.py  movements.py
src/simulation/: drone_autolanding_service.py  gazebo_camera.py  precise_landing.py
src/ui/: aruco_pose_estimation_cli.py  autolanding_cli.py  autolanding_sim_cli.py  calibrate_gridboard_live.py  cam_calibration_cli.py  camera_calibration_cli.py  common_functions.py  live_capture.py  mav_test.py  precision_landing_cli.py  test_mavlink.py  test_webrtc.py
src/vision/: aruco_detector.py  aruco_tracker.py  camera_calibrator.py  commons.py  picamera.py
(+15 files in other folders)
