[project]
name = "autolander"
version = "0.1.0"
description = ""
authors = [
    {name = "Bertrand Awenze",email = "beawe@ulaval.ca"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "numpy (>=2.4.1,<3.0.0)",
    "opencv-python (>=4.13.0.90,<5.0.0.0)",
    "click (>=8.3.1,<9.0.0)",
    "picamera2 (>=0.3.33,<0.4.0)"
]

[tool.poetry]
packages = [{include = "autolander", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-sugar = "^1.1.1"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
say-hello = "main:cli"